--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.6.1'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	//id 'groovy'
 }
 
 group = 'com.example'
@@ -13,7 +14,10 @@ repositories {
 }
 
 dependencies {
+	implementation 'javax.inject:javax.inject:1'
+	implementation 'org.apache.groovy:groovy:4.0.0-rc-2'
 	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
